--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -11,6 +11,8 @@ html{
   body{
     font-family: 'Lato';
     background-color: $bgColor;
-    padding-inline: 1rem;
+    &>*{
+      padding-inline: 1rem;
+    }
   }
 }
