--- a/styles/_configuration.scss
+++ b/styles/_configuration.scss
@@ -28,3 +28,10 @@ $colPrice:#694F04;
   color: $fontCol;
   @include transitionFast;
 };
+
+@mixin titleStyle(){
+  text-align: center;
+  font-weight: bolder;
+  margin-bottom: 1rem;
+  text-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+}
