--- a/styles/_info.scss
+++ b/styles/_info.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 0.5rem;
+  padding-bottom: 1rem;
   &__card{
     grid-column: span 2;
     display: flex;
