--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -12,7 +12,7 @@ html{
     font-family: 'Lato';
     background-color: $bgColor;
     &>*{
-      padding-inline: 1rem;
+      padding-inline: 10vw;
     }
   }
 }
