--- a/styles/_info.scss
+++ b/styles/_info.scss
@@ -3,28 +3,37 @@
   grid-template-columns: repeat(4, 1fr);
   gap: 0.5rem;
   padding-bottom: 1rem;
+  h2{
+    grid-column: span 4;
+    @include titleStyle;
+    font-size: 1.5rem;
+    color: $colPrice;
+  }
   &__card{
-    grid-column: span 2;
+    grid-column: span 4;
     display: flex;
     flex-direction: column;
     align-items: center;
     img{
-      width: 50%;
+      width: 25%;
       border-radius: 50%;
       border: solid 2px $colPrimary;
       padding: 1rem;
+      @include transitionFast;
+      &:hover{
+        transform: rotate3d(0, 1, 0, 360deg);
+        box-shadow: 0 0 5px -1px rgba(0, 0, 0, 0.9);
+      }
     }
     &__description{
       padding-block: 0.5rem;
-      font-size: 0.5rem;
+      font-size: 1rem;
       text-align: center;
       h3{
         font-weight: bolder;
         margin-bottom: 0.5rem;
       }
-      p{
-        text-align: justify;
-      }
+
     }
   }
 }
