--- a/styles/_title.scss
+++ b/styles/_title.scss
@@ -1,10 +1,10 @@
 .title{
   position: relative;
   &__slider{
-    display: flex;
     overflow-x: hidden;
     position: relative;
     width: 100%;
+    height: 200px;
     &::after{
       content:"";
       position: absolute;
@@ -20,6 +20,8 @@
       width: 400%;
       display: flex;
       img{
+        width: 100%;
+        height: 200px;
         object-fit: cover;
       }
     }
@@ -31,6 +33,7 @@
       width: 10%;
       left: 0.5rem;
       z-index: 3;
+      cursor: pointer;
       @include transitionFast;
       &:hover{
         background-color: changeOpacity($bgColor, 0.7);
