add styles for login html

--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -131,6 +131,9 @@
     cursor: pointer;
     @include transitionFast;
     display: block;
+    img{
+      height: 2rem;
+    }
     &:hover{
       transform: translateY(-4px);
       box-shadow: 0 4px 5px 2px rgba(0, 0, 0, 0.479);
