--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -5,6 +5,9 @@
 @import 'info';
 @import 'contact';
 @import 'homeResponsive';
+@import 'access';
+@import 'accessResponsive';
+
 
 html{
   scroll-behavior: smooth;
